# libpatts

./: .gitignore  Doxyfile  INSTALL  Makefile.am  README  README.md  SECURITY  configure.ac  patts.pc
doc/: build.md  tables-example.md
include/: Makefile.am
include/patts/: admin.h  conn.h  export.h  get.h  patts.h  query.h  setup.h  types.h  upload.h  user.h
m4/: NOTES
scripts/client/: create_user.sql
scripts/server/: init.sql
share/patts/queries/: create_user.sql
src/: Makefile.am  admin.c  conn.c  get.c  internal.c  internal.h  patts.c  query.c  setup.c  user.c
