AC_PREREQ([2.60])
define(_SERVER_VERSION_MAJOR, 0)
define(_SERVER_VERSION_MINOR, 1)
define(_SERVER_VERSION_REVISION, 0)
define(_COPYRIGHT_YEAR, 2014)
AC_INIT([pattsd],[_SERVER_VERSION_MAJOR._SERVER_VERSION_MINOR._SERVER_VERSION_REVISION],[support@delwink.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES])
AM_SILENT_RULES([yes])
LT_INIT
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
 Makefile
 src/Makefile
])
AC_OUTPUT
